--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,9 @@ figure {
 img {
   vertical-align: middle;
   border-style: none;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 svg {
